k8s-deployment-dind.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gimmelinux-dind
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gimmelinux-dind
  template:
    metadata:
      labels:
        app: gimmelinux-dind
    spec:
      containers:
      - name: gimmelinux-dind
        image: docker:20.10.7-dind
        securityContext:
          privileged: true
        command: ["--host=tcp://0.0.0.0:2375", "--host=unix:///var/run/docker.sock"]
        resources:
          limits:
            memory: "4Gi"
            cpu: "2"
          requests:
            memory: "4Gi"
            cpu: "2"
        volumeMounts:
        - name: dind-storage
          mountPath: /var/lib/docker
      volumes:
      - name: dind-storage
        emptyDir:
          sizeLimit: 8Gi
---
apiVersion: v1
kind: Service
metadata:
  name: gimmelinux-dind
spec:
  ports:
  - port: 2375
    targetPort: 2375
  selector:
    app: gimmelinux-dind
