k8s-deployment-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gimmelinux-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gimmelinux-frontend
  template:
    metadata:
      labels:
        app: gimmelinux-frontend
    spec:
      containers:
      - name: gimmelinux-frontend
        image: gimmelinux-frontend:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: gimmelinux-frontend
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: gimmelinux-frontend
