k8s-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gimmelinux-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host: gimmelinux.com
    http:
      paths:
      - path: /api(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: gimmelinux-backend
            port:
              number: 8000
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: gimmelinux-frontend
            port:
              number: 80
